--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 
     // New Material Design
     implementation "com.google.android.material:material:1.2.0"
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+
+    // MaterialDialog
     implementation "com.shreyaspatil:MaterialDialog:2.1"
 
     // Navigation Components
