--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,7 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
+
+    // ProgressBar
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
 }
