--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,8 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.6.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.2.0'
 
     // ProgressBar
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
