--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
-    // Coroutine Lifecycle Scopes
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
-
     // New Material Design
     implementation "com.google.android.material:material:1.2.1"
     implementation 'com.google.android.material:material:1.3.0-alpha02'
@@ -76,6 +72,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha07"
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
 
     // Navigation Components
