--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,12 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "androidx.appcompat:appcompat:1.2.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.2"
+    testImplementation "junit:junit:4.13"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
 
     // Room and Architectural Components
     implementation "androidx.room:room-runtime:2.2.5"
@@ -53,13 +53,13 @@ dependencies {
     kapt "androidx.room:room-compiler:2.2.5"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1"
 
     // New Material Design
     implementation "com.google.android.material:material:1.2.1"
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation "com.google.android.material:material:1.3.0-alpha03"
 
     // MaterialDialog
     implementation "com.shreyaspatil:MaterialDialog:2.1"
@@ -80,17 +80,17 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    kapt "com.github.bumptech.glide:compiler:4.11.0"
 
     // Dagger Core
     implementation "com.google.dagger:dagger:2.28.1"
     kapt "com.google.dagger:dagger-compiler:2.28"
 
     // Dagger Android
-    api 'com.google.dagger:dagger-android:2.28.1'
-    api 'com.google.dagger:dagger-android-support:2.28.1'
-    kapt 'com.google.dagger:dagger-android-processor:2.23.2'
+    api "com.google.dagger:dagger-android:2.28.1"
+    api "com.google.dagger:dagger-android-support:2.28.1"
+    kapt "com.google.dagger:dagger-android-processor:2.23.2"
 
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.1.0"
@@ -103,20 +103,23 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
 
     // Timber
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "com.jakewharton.timber:timber:4.7.1"
 
     // Image Picker
-    implementation 'com.github.dhaval2404:imagepicker:1.7.5'
+    implementation "com.github.dhaval2404:imagepicker:1.7.5"
 
     // Form Validator
-    implementation 'com.github.dhaval2404:android-form-validation:1.0'
+    implementation "com.github.dhaval2404:android-form-validation:1.0"
 
     // Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.6.0'
-    implementation 'com.google.firebase:firebase-auth:19.4.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.7.1'
-    implementation 'com.google.firebase:firebase-storage-ktx:19.2.0'
+    implementation "com.google.firebase:firebase-analytics:17.6.0"
+    implementation "com.google.firebase:firebase-auth:19.4.0"
+    implementation "com.google.firebase:firebase-firestore-ktx:21.7.1"
+    implementation "com.google.firebase:firebase-storage-ktx:19.2.0"
 
     // ProgressBar
-    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
+    implementation "com.agrawalsuneet.androidlibs:dotsloader:1.4"
+
+    // CircularImageView
+    implementation "com.github.abdularis:circularimageview:1.5"
 }
