--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ apply plugin: "kotlin-kapt"
 apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
     compileSdkVersion 30
@@ -116,6 +118,9 @@ dependencies {
     implementation "com.google.firebase:firebase-auth:19.4.0"
     implementation "com.google.firebase:firebase-firestore-ktx:21.7.1"
     implementation "com.google.firebase:firebase-storage-ktx:19.2.0"
+    implementation "com.google.firebase:firebase-crashlytics-ktx:17.2.2"
+    implementation "com.google.firebase:firebase-analytics-ktx:17.6.0"
+    implementation "com.google.firebase:firebase-perf-ktx:19.0.9"
 
     // ProgressBar
     implementation "com.agrawalsuneet.androidlibs:dotsloader:1.4"
