--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 2
-        versionName "1.0.1"
+        versionName "1.0.1c1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
