--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,4 +127,9 @@ dependencies {
 
     // CircularImageView
     implementation "com.github.abdularis:circularimageview:1.5"
+
+    //The android-app-updater library
+    implementation 'com.mobapphome.library:android-app-updater:1.3.3'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.jsoup:jsoup:1.10.2'
 }
