--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 3
-        versionName "1.0.2c1"
+        versionName "1.0.2rc1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
