--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ android {
         applicationId "mr.cooker.mrcooker"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 3
-        versionName "1.0.2rc1"
+        versionCode 4
+        versionName "1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
