--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,8 +140,11 @@ dependencies {
     // CircularImageView
     implementation "com.github.abdularis:circularimageview:1.5"
 
-    //The android-app-updater library
+    // The android-app-updater library
     implementation 'com.mobapphome.library:android-app-updater:1.3.3'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.jsoup:jsoup:1.10.2'
+
+    // Google adds
+    implementation 'com.google.android.gms:play-services-ads:19.6.0'
 }
